apk-gw.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "foo.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: bar-svc
      port: 8080
      kind: Endpoint
      group: wso2.com/v1beta1
      namespace: wso2
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: elsewhere.example
      - type: Custom
        extensionRef:
          group: wso2.com/v1beta1
          kind: Policy
          name: custom-policy-1
